--- a/public/index.html
+++ b/public/index.html
@@ -2,31 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Facebook Login Integration</title>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="logo192.png" />
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- Facebook SDK Loader -->
-    <script>
-      window.fbAsyncInit = function () {
-        FB.init({
-          appId: '1247680383201599', // Replace with your Facebook App ID
-          cookie: true,
-          xfbml: true,
-          version: 'v17.0',
-        });
-      };
-
-      (function (d, s, id) {
-        var js,
-          fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s);
-        js.id = id;
-        js.src = 'https://connect.facebook.net/en_US/sdk.js';
-        fjs.parentNode.insertBefore(js, fjs);
-      })(document, 'script', 'facebook-jssdk');
-    </script>
   </body>
 </html>
