--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,15 @@
     <link rel="apple-touch-icon" href="logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    
+    
 
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js?v=16.0"></script>
+
+  
     <div id="root"></div>
   </body>
 </html>
